--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^6.4.0",
     "react-slick": "^0.29.0"
   },
