--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^6.4.0",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "react-whatsapp": "^0.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
