Added: Call button

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GameX site",
+  "name": "GameX-site",
   "author": {
     "name": "Alexis De León Rodriguez",
     "email": "alexisdlr3009@hotmail.com"
